force-app/main/default/objects/CardScanSettings__mdt/CardScanSettings__mdt.object-meta.xml
<CustomObject>
    <label>名刺スキャン設定</label>
</CustomObject>