force-app/main/default/objects/CardScanSettings__mdt/fields/ConstText2__c.field-meta.xml
<CustomField>
    <fullName>ConstText2__c</fullName>
    <label>設定値（テキスト）２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>