force-app/main/default/objects/CardScanSettings__mdt/fields/ConstText3__c.field-meta.xml
<CustomField>
    <fullName>ConstText3__c</fullName>
    <label>設定値（テキスト）３</label>
    <length>255</length>
    <type>Text</type>
</CustomField>