force-app/main/default/objects/CardScanSettings__mdt/fields/ConstText4__c.field-meta.xml
<CustomField>
    <fullName>ConstText4__c</fullName>
    <label>設定値（テキスト）４</label>
    <length>255</length>
    <type>Text</type>
</CustomField>