force-app/main/default/objects/CardScanSettings__mdt/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>説明</label>
    <type>TextArea</type>
</CustomField>