force-app/main/default/objects/CardScanSettings__mdt/fields/ValidFlg__c.field-meta.xml
<CustomField>
    <fullName>ValidFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>有効フラグ</label>
    <type>Checkbox</type>
</CustomField>